--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="profile">
           <img class="abhi-img" src="images/abhi.png" alt="Abhishek">
           <h3>Hello</h3>
-          <p class="intro"> I am Abhishek recently, I am pursuing B.tech in Computer Science Engineerig from sage University and I am in IV sem, I love Tea. I am also running a channel on youtube</p>
+          <p class="intro"> I am Abhishek recently, I am pursuing B.tech in Computer Science Engineering from sage University and I am in IV sem, I love Tea. I am also running a channel on youtube</p>
         </div>
         <hr>
         <div class="skills">
@@ -34,7 +34,7 @@
           <div class="skill-row">
             <img class="com-img" src="images/computer.png" alt="Computer">
             <h3>Coding and Development</h3>
-            <p>I am learning web dev, aws and lots of things that enhance my skills and I am making projrcts in Web Development a wesites and a Guess It games.</p>
+            <p>I am learning web dev, aws and lots of things that enhance my skills and I am making projrcts in Web Development like some websites pages a Guess It games.</p>
           </div>
           <div class="skill-row">
             <img class="chill-img" src="images/chillies.png" alt="chillies">
