--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="skill-row">
             <img class="com-img" src="images/computer.png" alt="Computer">
             <h3>Coding and Development</h3>
-            <p>I am learning web dev, aws and lots of things that enhance my skills and I am making projrcts in Web Development like some websites pages a Guess It games.</p>
+            <p>I am learning web dev, aws and lots of things that enhance my skills and I am making projects in Web Development like some websites pages a Guess It games.</p>
           </div>
           <div class="skill-row">
             <img class="chill-img" src="images/chillies.png" alt="chillies">
